@@ -1,5 +1,7 @@
 LIST OF CHANGES FOR NPG-QC PACKAGE
 
+ - dropped ability for qc checks to sub-sample input fastq
+   instead run the checks directly off the cached fastq files
  - added fastqcheck code and replaced fastq_summ in Build.PL with fastqcheck
  - NovaSeq changes, new InterOp file format and per lane read counts now 64-bit unsigned ints
  - remove run_timeline component on the Illumina QC loader
